# learning

ogles3/hellotriangle/source/: CMakeLists.txt
ogles3/hellotriangle/source/common/: egl_win32_window.cpp  egl_win32_window.h  gles3_renderer.cpp  gles3_renderer.h
ogles3/hellotriangle/source/config/: HelloTriangleConfig.h.in
ogles3/hellotriangle/source/test/: test_main.cpp
windowing_system/glfw/: .cproject  .project
